dodo-k8s/dodo-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dodo-backend-deployment
  labels:
    app: dodo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dodo-backend
  template:
    metadata:
      labels:
        app: dodo-backend
    spec:
      containers:
      - name: dodo-backend
        image: gianlucabottiglieri/dodo-backend:1.4
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: dodo-backend-service
spec:
  selector:
    app: dodo-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
