dodo-k8s/dodo-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dodo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      # Route for frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dodo-frontend-service
            port:
              number: 3000
      # Route for backend
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: dodo-backend-service
            port:
              number: 8080
